--- a/PortManager/Views/DashBoardWindow.xaml
+++ b/PortManager/Views/DashBoardWindow.xaml
@@ -3,9 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:PortManager.ViewModels"
         xmlns:local="clr-namespace:PortManager.Views"
         mc:Ignorable="d"
         Title="DashBoardWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:DashBoardViewModel/>
+    </Window.DataContext>
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="10*"/>
@@ -19,10 +23,19 @@
 
         </StackPanel>
         
-        <StackPanel Grid.Row="1" Orientation="Vertical">
-            <DataGrid Margin="10" >
-                
+        <StackPanel Grid.Row="1" Orientation="Vertical" Height="400">
+            <DataGrid ItemsSource="{Binding Ports}" AutoGenerateColumns="False" IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="PID" Binding="{Binding PID}" Width="*"/>
+                    <DataGridTextColumn Header="Port" Binding="{Binding Port}" Width="*"/>
+                    <DataGridTextColumn Header="Protocol" Binding="{Binding Protocol}" Width="*"/>
+                    <DataGridTextColumn Header="Process Name" Binding="{Binding ProcessName}" Width="*"/>
+                    <DataGridTextColumn Header="Local Address" Binding="{Binding LocalAddress}" Width="*"/>
+                    <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
+                   
+                </DataGrid.Columns>
             </DataGrid>
+
         </StackPanel>
     </Grid>
 </Window>
