--- a/PortManager/Views/DashBoardWindow.xaml
+++ b/PortManager/Views/DashBoardWindow.xaml
@@ -1,10 +1,9 @@
 ﻿<Window x:Class="PortManager.Views.DashBoardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:PortManager.ViewModels"
-        xmlns:local="clr-namespace:PortManager.Views"
         mc:Ignorable="d"
         Title="DashBoardWindow" Height="450" Width="800">
     <Window.DataContext>
@@ -23,7 +22,7 @@
 
         </StackPanel>
         
-        <StackPanel Grid.Row="1" Orientation="Vertical" Height="400">
+        <StackPanel Grid.Row="1" Orientation="Vertical" Height="350" CanVerticallyScroll="True">
             <DataGrid ItemsSource="{Binding Ports}" AutoGenerateColumns="False" IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="PID" Binding="{Binding PID}" Width="*"/>
@@ -32,7 +31,16 @@
                     <DataGridTextColumn Header="Process Name" Binding="{Binding ProcessName}" Width="*"/>
                     <DataGridTextColumn Header="Local Address" Binding="{Binding LocalAddress}" Width="*"/>
                     <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
-                   
+                    <DataGridTemplateColumn Header="Action">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Kill"
+                                    Command="{Binding DataContext.KillCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                    CommandParameter="{Binding PID}"
+                                    Background="Red" Foreground="White"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
 
