--- a/PortManager/Views/DashBoardWindow.xaml
+++ b/PortManager/Views/DashBoardWindow.xaml
@@ -15,9 +15,11 @@
             <RowDefinition Height="90*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10">
-
-            <TextBox BorderBrush="Black" Height="20" Width="100" Text="search" />
+        <StackPanel Grid.Row="0" Orientation="Horizontal" >
+            <StackPanel Orientation="Vertical" Margin="0 -10">
+                <Label Content="search" Margin="-5 0 0 -5"/>
+                <TextBox BorderBrush="Black" Height="20" Width="100" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"  />
+            </StackPanel>
             <Button Content="Refresh" Height="20" Margin="10,0"/>
 
         </StackPanel>
