--- a/PortManager/Views/DashBoardWindow.xaml
+++ b/PortManager/Views/DashBoardWindow.xaml
@@ -23,9 +23,10 @@
             <Button Content="Refresh" Height="20" Margin="10,0"/>
 
         </StackPanel>
-        
-        <StackPanel Grid.Row="1" Orientation="Vertical" Height="350" CanVerticallyScroll="True">
-            <DataGrid ItemsSource="{Binding Ports}" AutoGenerateColumns="False" IsReadOnly="True">
+
+        <Grid Grid.Row="1" Height="350">
+            <DataGrid ItemsSource="{Binding Ports}" AutoGenerateColumns="False" IsReadOnly="True"
+              VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="PID" Binding="{Binding PID}" Width="*"/>
                     <DataGridTextColumn Header="Port" Binding="{Binding Port}" Width="*"/>
@@ -37,15 +38,14 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Content="Kill"
-                                    Command="{Binding DataContext.KillCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
-                                    CommandParameter="{Binding PID}"
-                                    Background="Red" Foreground="White"/>
+                                Command="{Binding DataContext.KillCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                CommandParameter="{Binding PID}"
+                                Background="Red" Foreground="White"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-
-        </StackPanel>
+        </Grid>
     </Grid>
 </Window>
